--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,14 @@
 .App {
   text-align: center;
   padding-top: 5rem;
+  display: flex;
+  min-height: 100vh;
 }
 
 .App__container {
-  max-width: 800px;
+  max-width: 80%;
   margin: 0 auto;
+  flex-grow: 1;
 }
 
 .App__title {
@@ -13,40 +16,22 @@
   margin-bottom: 2rem;
 }
 
-.Translation__container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 2rem;
-}
 
 .Translation__fields {
   display: flex;
   justify-content: space-between;
-  width: 100%;
   margin-bottom: 1rem;
 }
 
 .Translation__input,
 .Translation__output {
-  width: 50%;
-}
-
-.Translation__input-field,
-.Translation__output-field {
-  width: 100%;
+  width: calc(50% - 0.5rem);
 }
 
 .Translation__button {
-  margin-bottom: 2rem;
+  margin-top: 1rem;
+  text-align: center;
 }
-
-.Translation__button-translate {
-  font-size: 1.2rem;
-  padding: 0.8rem 2rem;
-}
-
-/* ... existing styles ... */
 
 .Output__container {
   display: flex;
@@ -62,4 +47,14 @@
 
 .Output__score {
   font-size: 1.2rem;
+}
+
+.footer {
+  position: sticky;
+  bottom: 0;
+  width: 100%;
+  background-color: #fff;
+  /* Change this to your desired background color */
+  padding: 1rem 0;
+  /* Add some padding if needed */
 }
